--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -222,7 +222,7 @@ Given the increasing relevance of interoception across psychology and neuroscien
 
 # Study 1
 
-Study 1 will re-analyse and assess the factor structure of the IAS by taking advantage of the large number of open-access datasets [@brand2023; @campos2021; @lin2023; @murphy2019; @arslanova2022; @todd2022; @gaggero2021; @brand2022; @von2023; @poerio2024interoceptive].
+Study 1 will re-analyse and assess the factor structure of the IAS by taking advantage of the large number of open-access datasets [@brand2023; @campos2021; @lin2023; @murphy2019; @arslanova2022; @todd2022; @gaggero2021; @brand2022; @von2023; @poerio2024interoceptive; @petzke2024somatic].
 While combining these studies might provide a more robust and generalizable understanding of the IAS' factor structure, we also additionally provide an individual analysis (i.e., applying the same method on all samples separately) to add nuance to the general picture, as all studies differ in their sample size, demographic characteristics, language, and procedure.
 
 ## Methods
@@ -232,9 +232,9 @@ While combining these studies might provide a more robust and generalizable unde
 Our search focused on studies citing the original IAS validation paper [@murphy2019], identifying 136 papers (as of 01/05/2024).
 To qualify for inclusion, papers needed to (1) provide accessible data in open-access, (2) employ the IAS as a measure, and (3) report individual IAS items scores.
 We also included the data of five unpublished studies.
-A total of 16 datasets was included (see **Table 1**).
+A total of 17 datasets was included (see **Table 1**).
 
-The total number of participants was 33,272 participants (Mean = 48.09 $\pm$ 13.1, 71.3\% Female).
+The total number of participants was 33,526 participants (Mean = 47.96 $\pm$ 13.1, 71.3\% Female).
 
 <!-- Note: this table is generated during data analysis -->
 
@@ -351,13 +351,14 @@ EFA suggested once again 3 factors as the optimal solution, with the first facto
 
 <!-- CFA Model Comparison
 Name	BIC	RMSEA	Chi2	CFI	BF
-fit_g	13466.62	0.106	325.704	0.784	Inf
-fit_ega	15870.94	0.026	72.825	0.988	NA
-fit_egag	15892.96	0.059	180.403	0.924	1.654961e-05
-fit_hclustg	15911.16	0.065	210.828	0.905	1.846821e-09
-fit_hclust	15913.39	0.062	182.492	0.921	6.080789e-10
-fit_efa	15941.59	0.073	253.472	0.877	4.576430e-16
-fit_efag	15941.59	0.073	253.472	0.877	4.576430e-16 -->
+fit_g	940941.8	0.124	27,398.095	0.783	Inf
+fit_ega	1110166.4	0.035	2,334.112	0.984	NA
+fit_egag	1114563.1	0.054	6,876.395	0.952	0
+fit_hclust	1121159.8	0.078	13,441.878	0.906	0
+fit_hclustg	1122347.5	0.079	14,681.532	0.897	0
+fit_efag	1124348.4	0.083	16,703.253	0.883	0
+fit_efa	1124348.4	0.083	16,703.253	0.883	0 -->
+
 
 <!-- Samples where CFA converged
 fit_ega	15870.94	0.026	72.825	0.988	NA - sample 1a
@@ -371,14 +372,16 @@ fit_ega	18031.48	0.031	83.225	0.977	NA - sample 8b
 it_ega	720615.2	0.041	2,068.422	0.980	NA - sample 9
 fit_ega	29023.36	0.052	181.784	0.948	NA - sample 11
 fit_ega	25899.23	0.038	116.734	0.977	NA - sample 13
-fit_ega	3975.352	0.040	65.620	0.975	NA - sampple 14 -->
+fit_ega	3975.352	0.040	65.620	0.975	NA - sampple 14 
+fit_ega	8493.471	0.057	102.289	0.947	NA - sample 17
+-->
 
 <!-- did not converge: df1b, df2, df3, df5, df10 (missing items), df12 (errors), df15 (errors), df16,  -->
 
 <!-- CFA -->
-We then fitted and compared using CFA various candidate structures emerging from the previous analyses, including a 1-factor model (the G-model), a 3-factor model (EFA), a 3+1 model (EFA + general factor), a 5-factor model (HCA), a 5+1 model (HCA + general factor), a 7-factor model (EGA), and a 7+1 model (EGA + general factor). The EGA model with 7 factors of item pairs provided the best fit with the lowest RMSEA (0.026), lowest $\chi^2$ (72.825), highest CFI (0.988). It was followed by the EGA + general factor model (RMSEA = 0.059, $\chi^2$ = 180.403, CFI = 0.065), and the HCA model with 5 factors (RMSEA = 0.062, $\chi^2$ = 182.492, CFI = 0.921). The other models performed poorly, with RMSEA > 0.08 and CFI < 0.90. The unique-factor model yielded the lowest BIC (which takes into account the number of factors), followed by the EGA model. All the other models displayed significantly (BIC-based Bayes Factor < 1/100) lower evidence compared to the EGA model.
+We then fitted and compared using CFA various candidate structures emerging from the previous analyses, including a 1-factor model (the G-model), a 3-factor model (EFA), a 3+1 model (EFA + general factor), a 5-factor model (HCA), a 5+1 model (HCA + general factor), a 7-factor model (EGA), and a 7+1 model (EGA + general factor). The EGA model with 7 factors of item pairs provided the best fit with the lowest RMSEA (0.035), lowest $\chi^2$ (2,334.112), highest CFI (0.984). It was followed by the EGA + general factor model (RMSEA = 0.054, $\chi^2$ = 6,876.395, CFI = 0.952), and the HCA model with 5 factors (RMSEA = 0.078, $\chi^2$ = 13,441.878, CFI = 0.906). The other models performed poorly, with RMSEA > 0.08 and CFI < 0.90. The unique-factor model yielded the lowest BIC (which takes into account the number of factors), followed by the EGA model. All the other models displayed significantly (BIC-based Bayes Factor < 1/100) lower evidence compared to the EGA model.
 
-This result was relatively consistent across unique datasets with the EGA model providing the best fit. In all samples where CFA converged, it showed excellent performance with low RMSEA (≈ 0.025–0.052), high CFI (≥ 0.95), and substantially lower $\chi^2$ compared to alternative models. Adding a general factor systematically worsened fit, while hierarchical clustering and EFA-based models showed poorer performance (RMSEA > 0.05, CFI < 0.95). Although BIC values occasionally favored alternative specifications, Bayes factor comparisons overwhelmingly supported the EGA solution, confirming its robustness across datasets.
+This result was relatively consistent across unique datasets with the EGA model providing the best fit. In all samples where CFA converged, it showed excellent performance with low RMSEA (≈ 0.025–0.057), high CFI (≥ 0.95), and substantially lower $\chi^2$ compared to alternative models. Adding a general factor systematically worsened fit, while hierarchical clustering and EFA-based models showed poorer performance (RMSEA > 0.05, CFI < 0.95). Although BIC values occasionally favored alternative specifications, Bayes factor comparisons overwhelmingly supported the EGA solution, confirming its robustness across datasets.
 
 
 ## Discussion
