--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -493,33 +493,36 @@ Age showed consistent positive standardized associations across IAS correlates (
 
 <!-- Interoceptive measures -->
 
-MAIA subscales showed robust positive standardized effects with the IAS. Noticing yielded the strongest association (mean β = .26), followed by Emotional Awareness (β = .20) and related subscales - Body Listening, Attention Regulation, Trusting, and Self-Regulation, each in the .20–.26 range, all significant. Effects were generally strongest for the full IAS, except for Body Listening, which peaked for the Bruise–Blood pairing. Not Distracting was weakly but significantly positive (mean β = .06), primarily for Hungry–Thirsty, Bruise–Blood, and Muscles–Pain. Not Worrying was significant only for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (β ≈ −.01 to .11).
+MAIA subscales showed robust positive standardized effects with the IAS. Noticing yielded the strongest association (mean β = .26), followed by Attention Regulation (mean β = .25) and related subscales - Body Listening, Trusting, Emotional Awareness and Self-Regulation, each in the .19–.24 range, all significant. Effects were generally strongest for the full IAS, except for Body Listening, which peaked for the Bruise–Blood pairing. Not Distracting was weakly and significantly only for the full IAS, Hungry-Thirsty, Bruise-Blood sugar and the Muscles-Pain pairings (β ≈ −.02 to .06). Not Worrying was significant only for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (β ≈ −.01 to .04).
 
-Autonomic Reactivity (BPQ; mean β = −.19) was reliably negative across pairings, reaching significance for all except the Bruise–Blood sugar and Breathing–Heart pairings. In contrast, Body Awareness (BPQ; mean β = .12) was weakly positive and significant only for Bruise–Blood.
+Autonomic Reactivity (BPQ; mean β = −.19) was reliably negative across pairings, reaching significance for all except the Bruise–Blood sugar and Breathing–Heart pairings. In contrast, Body Awareness (BPQ; mean β ≈ .15; range = .10 to .22) was positive and significant across most pairings with the exception of Wind-Burp and Urinate-Defecate.
 
-Interoceptive deficits showed consistent negative standardized effects. Alexithymia measures (TAS, BVAQ) were robustly negative (β ≈ −.18 to −.24), except for the BVAQ Affective subscale, which was positive for Bruise–Blood (β = .16). Interoceptive confusion (ICQ) was also strongly negative across all IAS measures (mean β ≈ −.42; range = −.49 to −.20).
+Interoceptive deficits showed consistent negative standardized effects. Alexithymia measures (TAS, BVAQ) were robustly negative (β ≈ −.13 to −.2), except for the BVAQ Affective subscale, which was positive for Bruise–Blood (β = .16). Interoceptive confusion (ICQ) was also negative across all IAS measures (mean β ≈ −.32; range = −.49 to −.20).
 
 <!-- Mood and psychopathology -->
 
-Depression (BDI; mean β = −.20) and anxiety (STAI-T; mean β = −.19) showed consistent negative associations across the IAS and pairings, strongest for Hungry–Thirsty. Related constructs diverged somewhat: MFQ was largely nonsignificant; PHQ-9 and other mood indices (PHQ-15, PHQ-4, GAD-7) produced weaker but often reliable negative βs (typically −.10 to −.15), with effects sometimes limited to particular pairings (e.g., PHQ-15 nonsignificant for Wind–Burp and Breathing–Heart). Hungry–Thirsty consistently yielded the strongest standardized effects.
+Depression (BDI; mean β = −.20) and anxiety (STAI-T; mean β = −.20) showed consistent negative associations across the IAS and its pairings, with the strongest effects observed for the Hungry–Thirsty dimension. Related constructs showed some divergence: the MFQ was largely nonsignificant except for a notable effect in the Breathing–Heart pairing, while somatic concerns (PHQ-15) were unrelated to the total scale but showed weak negative associations with the Hungry–Thirsty, Bruise–Blood sugar, and Urinate–Defecate pairings (β ≈ −.22 to −.05). Other mood indices (PHQ-9, PHQ-4, GAD-7) produced generally weaker but often reliable negative coefficients (typically −.10 to −.15), though effects sometimes appeared only for specific pairings (e.g., PHQ-4 nonsignificant for Wind–Burp and Breathing–Heart). Across measures, the Hungry–Thirsty pairing consistently yielded the strongest standardized effects.
 
 <!-- Psychopathologies -->
 
-Autistic traits (ASQ) were generally negatively associated with IAS scores. Imagination (mean β = −.18) showed the most consistent pattern across pairings except Cough–Sneeze. Most full-IAS associations were driven by Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain, which yielded the largest negative coefficients. Beyond these, effects weakened or became nonsignificant- Patterns and Numbers showed none, and Borderline Personality was associated only with Hungry–Thirsty (mean β = −.14).
+Autistic traits (ASQ) were generally negatively associated with IAS scores. Among ASQ subscales, Imagination (mean β = −.18) exhibited the most consistent pattern of negative associations across pairings, with the exception of Cough–Sneeze. The strongest full-scale effects were driven by the Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain pairings, which yielded the largest negative coefficients. In contrast, associations weakened or became nonsignificant for other pairings.
 
-Schizotypal traits showed similarly negative coefficients, with Social Anxiety (mean β = −.11) and No Close Friends (mean β = −.12) most consistent. Some facets were unrelated to the overall IAS but linked to specific pairings: Unusual Perceptions with Muscles–Pain and Urinate–Defecate, and Eccentric with Hungry–Thirsty and Urinate–Defecate.
+A comparable trend was observed for maladaptive personality traits. Detachment, Psychoticism, and Negative Affect demonstrated the most reliable, albeit weak, negative associations with overall IAS scores (mean β range = −.08 to −.10), again primarily driven by the Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain pairings. Other maladaptive traits were unrelated to IAS scores. Notably, Antagonism was the only trait to show a significant positive association, limited to the Bruise–Blood sugar pairing (β = .14), whereas Borderline Personality was uniquely associated with Hungry–Thirsty (mean β = −.14).
+
+Schizotypal traits showed a similarly negative pattern of associations. Social Anxiety (mean β = −.11) and No Close Friends (mean β = −.12) displayed the most consistent effects. Although some facets were unrelated to the overall IAS score, they were associated with specific pairings: Unusual Perceptions with Muscles–Pain and Urinate–Defecate, and Eccentric with Hungry–Thirsty and Urinate–Defecate.
 
 <!-- Personality and beliefs -->
 
-Among Big Five traits, Openness (mean β = .10), Agreeableness (β = .08), and Conscientiousness (β = .11) showed small but consistent positive effects, most evident for the full IAS. Honesty–Humility (mean β = −.10) showed a small negative effect, primarily for Hungry–Thirsty and Bruise–Blood sugar. Neuroticism (mean β = −.13) was negatively associated with the IAS, with the strongest β for Bruise–Blood (β = −.23).
+Among Big Five traits, Openness (mean β = .10), Agreeableness (β = .08), and Conscientiousness (β = .11) showed small but consistent positive effects, most evident for the full IAS. Honesty–Humility (mean β = −.10) showed a small negative effect, primarily for Hungry–Thirsty and Bruise–Blood sugar. Neuroticism (mean β = −.13) was negatively associated with the IAS, with the strongest β for Hungry-Thirsty (β = −.23).
 
-Primal world beliefs were largely null, with small positive standardized coefficients for certain beliefs: “Understandable,” “Alive,” and “Hierarchical” were weakly positive for the full IAS and Hungry–Thirsty (β ≈ .05–.10), while “Good” was uniquely positive for Muscles–Pain (β ≈ .09). Within the Lying Profile, only Lying Contextuality showed a modest negative coefficient for Bruise–Blood (β = −.12).
+Primal world beliefs were largely null, with small positive standardized coefficients for certain beliefs: “Understandable,” “Alive,” and “Hierarchical” were weakly positive for the full IAS and Hungry–Thirsty (β ≈ .08–.11), while “Good” was uniquely positive for Muscles–Pain (β ≈ .09). Within the Lying Profile, only Lying Contextuality showed a modest negative coefficient for Bruise–Blood (β = −.12).
 
-Conspiracy Beliefs produced selective small positive effects. Global Conspiracies (GCBS) were associated with the full IAS and several pairings (mean β = .10), Government Malfeasance (β = .05) with Cough–Sneeze, and Extraterrestrial beliefs (β = .03) with Muscles–Pain.
+Conspiracy Beliefs produced selective small positive effects. Global Conspiracies (GCBS) were associated with the full IAS and three pairings (mean β = .10), Personal Wellbeing with the full scale and the Hungry-Thirsty (mean β = .09), and Information Control (β = .06) with Cough–Sneeze.
 
 <!-- Differences between the full IAS and item pairings -->
 
-Overall, the full IAS produced the greatest number of significant standardized effects (29), though many were driven by specific pairings rather than uniform scale-wide associations. Hungry–Thirsty (17) and Bruise–Blood sugar (10) consistently yielded the strongest standardized coefficients, especially for interoceptive, mood, and psychopathology measures. Other pairings (Cough–Sneeze, Wind–Burp, Urinate–Defecate) contributed little unique variance and rarely yielded meaningful standardized effects.
+Overall, the full IAS produced the greatest number of significant standardized effects (28), though many were driven by specific pairings rather than uniform scale-wide associations. Hungry–Thirsty (17) and Bruise–Blood sugar (10) consistently yielded the strongest standardized coefficients, especially for interoceptive, mood, and psychopathology measures. Other pairings (Cough–Sneeze, Wind–Burp, Urinate–Defecate) contributed little unique variance and rarely yielded meaningful standardized effects. 
+
 
 ## Discussion
 
